fix stock gap

--- a/src/components/shopcart/item/item.scss
+++ b/src/components/shopcart/item/item.scss
@@ -47,7 +47,7 @@
 
         ul {
             display:flex;
-            gap: 10px;
+            gap: 5px;
             flex-basis: 50%;
             margin:0;
             padding:0;
